[tool.poetry]
name = "repl_python3_lesson10-geocoding-Kaede-Imai"
version = "0.1.0"
description = ""
authors = ["KaedeImai <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
pyproj = "^3.1.0"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
